# itmo-cv

./: lab-3.ipynb  lab-4.ipynb  lab-5.ipynb  lab-6.ipynb  lab-7.ipynb  pyproject.toml
